--- a/index.html
+++ b/index.html
@@ -115,7 +115,20 @@
        </div>
     </section>
     <footer>
-        social links here
+        <ul>
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook Page (Opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter Page (Opens in a new tab)"><i class="fa-brands fa-square-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube Page (Opens in a new tab)"><i class="fa-brands fa-square-youtube"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram Page (Opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
+            </li>
+        </ul>
     </footer>
 
     <script src="https://kit.fontawesome.com/c07b54a021.js" crossorigin="anonymous"></script>
