--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
        </div>
     </section>
     <footer>
-        <ul>
+        <ul class ="social-networks">
             <li>
                 <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook Page (Opens in a new tab)"><i class="fa-brands fa-square-facebook"></i></a>
             </li>
